soj-backend-istio/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: soj-ingress-gateway
  namespace: soj
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: http-gateway
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: soj-virtual-service
  namespace: soj
spec:
  hosts:
    - "*"
  gateways:
    - soj-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /api/user
      route:
        - destination:
            host: user-service
            port:
              number: 8001
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - OPTIONS
        allowHeaders:
          - "*"
        allowCredentials: true
    - match:
        - uri:
            prefix: /api/question
      route:
        - destination:
            host: question-service
            port:
              number: 8002
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - OPTIONS
        allowHeaders:
          - "*"
        allowCredentials: true
